samples/map/valid/R9.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="initial.dita" collection-type="family"/>
  <glossref href="glossary.dita"/>
</map>