samples/map/invalid/R7.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref collection-type="family"/>
</map>